feat: Add Font Awesome icons and footer to index.html

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+    <!-- importação fonte awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <!-- importação do css -->
+
  
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div class="box">
+        <!-- icone de corrente / link -->
+         <i class="fas fa-link"></i>
         <h2 class="title">Encurtador de Links</h2>
         <div class="box-input">
             <input class="input-url" id="input-url" type="text" placeholder="Coloque sua URL aqui" />
@@ -23,5 +29,9 @@
     </div>
  
     <script src="script.js"></script>
+
+    <footer>
+        <p>Desenvolvido por <a href="rebrand.ly/077uu9l" target="_blank">BADWOLF.DEV</a></p>
+    </footer>
 </body>
 </html>
