--- a/index.html
+++ b/index.html
@@ -1,37 +1,54 @@
-<!DOCTYPE html> <!-- index.html -->
+<!DOCTYPE html>
+<!-- index.html -->
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Encurtador de Links</title>
- 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap"
+      rel="stylesheet"
+    />
     <!-- importação fonte awesome cdn -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <!-- importação do css -->
 
- 
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+  </head>
+  <body>
     <div class="box">
-        <!-- icone de corrente / link -->
-         <i class="fas fa-link"></i>
+      <!-- icone de corrente / link -->
+      <div class="icon-box">
+        <i class="fas fa-link"></i>
         <h2 class="title">Encurtador de Links</h2>
-        <div class="box-input">
-            <input class="input-url" id="input-url" type="text" placeholder="Coloque sua URL aqui" />
-            <button class="btn btn-short" onclick="encurtarUrl()">Encurtar</button>
-            <button class="btn btn-copy" onclick="copiar()">Copiar</button>
-        </div>
+      </div>
+
+      <div class="box-input">
+        <input
+          class="input-url"
+          id="input-url"
+          type="text"
+          placeholder="Coloque sua URL aqui"
+        />
+        <button class="btn btn-short" onclick="encurtarUrl()">Encurtar</button>
+        <button class="btn btn-copy" onclick="copiar()">Copiar</button>
+      </div>
     </div>
- 
+
     <script src="script.js"></script>
 
-    <footer>
-        <p>Desenvolvido por <a href="rebrand.ly/077uu9l" target="_blank">BADWOLF.DEV</a></p>
+    <footer id="footer" class="footer">
+      <p>
+        Desenvolvido por
+        <a href="rebrand.ly/077uu9l" target="_blank">BADWOLF.DEV</a>
+      </p>
     </footer>
-</body>
+  </body>
 </html>
