feat: Corrigir link do rodapé no index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <footer id="footer" class="footer">
       <p>
         Desenvolvido por
-        <a href="rebrand.ly/077uu9l" target="_blank">BADWOLF.DEV</a>
+        <a href="https://rebrand.ly/077uu9l" target="_blank">BADWOLF.DEV</a>
       </p>
     </footer>
   </body>
