feat: Adicionar variáveis CSS e melhorar estilos no index.html e style.css

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <footer id="footer" class="footer">
       <p>
         Desenvolvido por
-        <a href="https://rebrand.ly/077uu9l" target="_blank">dieguesmosken</a>
+        <a href="https://rebrand.ly/077uu9l" target="_blank" rel="noopener">dieguesmosken</a>
       </p>
     </footer>
   </body>
